# monitoring_agent

./: .dockerignore  .gitignore  AGENT_ARCHITECTURE.md  CMakeLists.txt  COMMAND_API_USAGE.md  GpuMetricsCollector.cs  README.md  agent_config.json  docker-compose.yml  installer.nsi  monitoring_agent_installer.txt  test_complete_system.py  test_config.json  test_new_agent_features.py  ТЗ  ТЗ 3 этап  ТЗ_3_этапа_анализ.md  бд-доп.txt  бд.txt
database/: init.sql  schema.sql  seed_data.sql
database/migrations/: 001_initial_schema.sql  002_metrics_tables.sql
docs/: agent.md  database.md  deployment.md  production.md  server.md
include/: linux_metrics_collector.hpp  metrics_collector.hpp  windows_metrics_collector.hpp
include/metrics/: interfaces.hpp  linux.hpp  windows.hpp
installers/: install_monitoring_agent.sh  monitoring_agent_installer.nsi  monitoring_agent_installer.txt  server.py
scripts/: apply_migration_002.sh  backup_database.sh  init_database.sh
server/: Dockerfile  README.md  README_SCRIPTS.md  env_example.txt  requirements.txt  run.py  script_api_examples.md  test_agent_management.py  test_api.py  test_script_api.py  test_scripts_windows.bat
server/app/: __init__.py  main.py  metrics_log.jsonl  schemas.py
server/app/api/: __init__.py  agents.py
server/app/database/: __init__.py  api.py  connection.py  migrations.py  models.py
server/app/models/: agent.py
server/app/services/: agent_service.py
server/tests/: test_agent_manager_scripts.py  test_russian_text.py  test_scripts_endpoints.py
src/: agent_api.cpp  agent_api.hpp  agent_config.cpp  agent_config.hpp  linux_metrics_collector.cpp  main.cpp  main_new.cpp  windows_metrics_collector.cpp
src/transport/: http_reporter.cpp
